fix: Text not wrapping in expand section of info card

--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -72,3 +72,7 @@ body {
 .v-dialog {
 	background-color: white;
 }
+
+.v-list-item__title {
+	white-space: normal;
+}
